--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,18 +1,18 @@
 .promo {
 	position: relative;
 	min-height: 100vh;
-	background: url("../img/main_bg.jpg") 50% / cover no-repeat;
+	background: url("../img/main_bg.jpg") center center / cover no-repeat;
 	padding-top: 205px;
 	&__title {
 		width: 535px;
 		margin-top: 10px;
 	}
 	&__subtitle{
-		z-index: 2;
+		z-index: 5;
 		padding-left: 10px;
 		position: relative;
 		@include before_circle;
-	}
+		}
 
 	// .promo__buttons
 
