--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,11 +2,12 @@
 @import 'base/null';
 @import 'base/variables';
 @import 'base/mixins';
-@import 'blocks/promo'; 
+@import 'blocks/menu';
 @import 'blocks/title'; 
+@import 'blocks/promo'; 
 @import 'blocks/button'; 
 @import 'blocks/side-panel';
-@import 'blocks/menu';
+@import 'blocks/about';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
 * {
@@ -15,6 +16,7 @@
     padding: 0;
 }
 .container{
-    width: 1140px;
+    width: 1470px;
+    padding: 0 15px;
     margin: 0 auto;
 }
