--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,28 +1,26 @@
 .about {
-	padding: 120px 0 120px;
+	padding-top: 120px;
 	position: relative;
 	&__wrapper {
 		display: grid;
-		grid-template-columns: 400px 570px 570px;
-		grid-auto-flow: auto;
-		grid-template-rows: 300px 300px;
+		grid-template-columns: 400px 570px;
+		grid-template-rows: minmax(245px, auto) minmax(255px, auto);
+		grid-auto-rows: minmax(245px, auto);
 		column-gap: 70px;
+		row-gap: 40px;
 	}
-	&__devider{
-		width: 60px;
-		height: 3px;
-		background-color: $main-color;
-		margin-bottom: 20px;
-	}
+
 	// .about__img
 
 	&__img {
+		grid-row: 1 / 3;
 		img{
 			max-width: 100%;
 		}
 	}
 	&__subtitle{
-		padding-left: 10px;
+		padding-left: 12px;
+		padding-top: 1px;
 		z-index: 5;
 		position: relative;
 		@include before_circle;
@@ -30,11 +28,17 @@
 	// .about__descr
 
 	&__descr {
+		padding-top: 6px;
+		.devider{
+			margin-top: 0;
+		}
 	}
 
 	// .about__text
 
 	&__text {
+		margin-top: 20px;
+		margin-bottom: 0;
 		font-weight: 500;
 		font-size: 14px;
 		line-height: 21px;
@@ -43,14 +47,47 @@
 	// .about__skills
 
 	&__skills {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template: repeat(2, minmax(115px, auto)) / repeat(2, 1fr);
+		grid-auto-rows: 1fr;
+		column-gap: 50px;
+		row-gap: 20px;
 	}
-}
-.container {
-}
-.title {
+		// .about__skills-wrapper
 
-	// .title_fz16
+		&__skills-item {
+			display: grid;
+			grid-template-columns: 40px 1fr;
+			column-gap: 20px;
+		}
+		
+		&__skills-circle{
+			position: relative;
+			@include before_circle;
+			&:before{
+				top: 5px;
+			}
+		}
+		&__skills-icon{
+			padding: 20px 0px 0px 15px;
+		}
+		&__skills-descr {
+		}
 
-	&_fz16 {
-	}
+		// .about__skills-title
+
+		&__skills-title {
+		}
+
+		// .about__skills-text
+
+		&__skills-text {
+			margin-top: 6px;
+			font-weight: 500;
+			font-size: 12px;
+			line-height: 18px;
+			margin-bottom: 0;
+		}
 }
+
