--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,12 +2,6 @@
 @import 'base/null';
 @import 'base/variables';
 @import 'base/mixins';
-@import 'blocks/menu';
-@import 'blocks/title'; 
-@import 'blocks/promo'; 
-@import 'blocks/button'; 
-@import 'blocks/side-panel';
-@import 'blocks/about';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
 * {
@@ -16,7 +10,19 @@
     padding: 0;
 }
 .container{
-    width: 1470px;
+    width: 1170px;
     padding: 0 15px;
     margin: 0 auto;
 }
+.devider{
+    width: 60px;
+    height: 3px;
+    margin-top: 25px;
+    background-color: $main-color;
+}
+@import 'blocks/menu';
+@import 'blocks/title'; 
+@import 'blocks/promo'; 
+@import 'blocks/button'; 
+@import 'blocks/side-panel';
+@import 'blocks/about';
