--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -11,3 +11,17 @@
 		background: $main-color;
 	}
 }
+@mixin before_circle-center {
+	&:before{
+		content: '';
+		position: absolute;
+		z-index: -1;
+		top: -6px;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 36px;
+		border-radius: 100%;
+		height: 36px;
+		background: $main-color;
+	}
+}
