--- a/src/sass/blocks/_stack.scss
+++ b/src/sass/blocks/_stack.scss
@@ -20,7 +20,7 @@
 		padding: 60px 10px 0 10px;
 		display: grid;
 		grid-template-columns: repeat(4, auto);
-		grid-template-rows: repeat(2, minmax(270px, 1fr));
+		grid-template-rows: repeat(2, minmax(270px, auto));
 		grid-auto-rows: minmax(270px, auto);
 		gap: 13px;
 	}
@@ -30,14 +30,12 @@
 	&__grid-item {
 		padding: 30px 30px 25px 30px;
 		width: 270px;
-		height: 270px;
 		border: 1px solid rgba(0, 0 ,0);
 	}
 }
 
 .item-grid {
 
-	// .item-grid__img
 
 	&__img {
 		img{
@@ -59,5 +57,75 @@
 		font-weight: 500;
 		font-size: 12px;
 		line-height: 18px;
+	}
+}
+
+
+.stack {
+
+	// .stack__grid-container-lines
+
+	&__grid-container-lines {
+		padding-top: 120px;
+		display: grid;
+		grid-template-columns: repeat(3, 350px);
+		grid-template-rows: repeat(2, minmax(70px, auto));
+		grid-auto-rows: minmax(70px, auto);
+		column-gap: 45px;
+		row-gap: 30px;
+	}
+
+	// .stack__grid-lines-item
+
+	&__grid-lines-item {
+	}
+}
+.item-lines-grid {
+	padding-top: 8px;
+	&__head {
+		display: grid;
+		grid-template-columns: 1fr 40px;
+		grid-template-rows: repeat(2, minmax(36px, auto));
+	}
+
+	// .item-lines-grid__title
+
+	&__title {
+		padding-left: 13px;
+		line-height: 18px;
+		position: relative;
+		@include before_circle;
+	}
+
+	// .item-lines-grid__number
+
+	&__number {
+		justify-self: end;
+	}
+
+	// .item-lines-grid__line
+
+	&__line {
+		align-self: end;
+		grid-column: 1/3;
+		width: 350px;
+		height: 14px;
+		background: #E8E4DE;
+		border-radius: 4px;
+	}
+
+	// .item-lines-grid__inner-line
+
+	&__inner-line {
+		height: 14px;
+		border-radius: 4px;
+		background-color: $main-color;
+	}
+}
+.title {
+
+	// .title_fz14
+
+	&_fz14 {
 	}
 }
