add section portfolio and start section price

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -28,4 +28,6 @@
 @import 'blocks/about';
 @import 'blocks/usefull';
 @import 'blocks/stack';
+@import 'blocks/portfolio';
+@import 'blocks/price';
 
