--- a/src/sass/blocks/_stack.scss
+++ b/src/sass/blocks/_stack.scss
@@ -70,7 +70,7 @@
 		display: grid;
 		grid-template-columns: repeat(3, 350px);
 		grid-template-rows: repeat(2, minmax(70px, auto));
-		grid-auto-rows: minmax(70px, auto);
+		grid-auto-rows: 1fr;
 		column-gap: 45px;
 		row-gap: 30px;
 	}
@@ -81,25 +81,28 @@
 	}
 }
 .item-lines-grid {
-	padding-top: 8px;
-	&__head {
+	&__body {
 		display: grid;
-		grid-template-columns: 1fr 40px;
+		grid-template-columns: 1fr minmax(40px, 1fr);
 		grid-template-rows: repeat(2, minmax(36px, auto));
 	}
 
 	// .item-lines-grid__title
 
 	&__title {
+		padding-top: 8px;
 		padding-left: 13px;
-		line-height: 18px;
 		position: relative;
 		@include before_circle;
+		&:before{
+			top: 0;
+		}
 	}
 
 	// .item-lines-grid__number
 
 	&__number {
+		padding-top: 8px;
 		justify-self: end;
 	}
 
