--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -3,6 +3,7 @@
 	padding-top: 60px;
 
 	&__title {
+		text-align: center;
 		position: relative;
 		@include before_circle-center;
 	}
@@ -10,42 +11,60 @@
 	// .price__subtitle
 
 	&__subtitle {
+		text-align: center;
 	}
 
 	// .price__wrapper
 
 	&__wrapper {
+		margin: 0 auto;
+		margin-top: 60px;
+		width: 1040px;
+		display: grid;
+		grid-template-columns: repeat(2, 370px);
+		justify-content: space-between;
+		row-gap: 15px;
 	}
 
 	// .price__item
 
 	&__item {
+		display: grid;
+		grid-template-columns: 1fr auto;
+		grid-template-rows: repeat(2, minmax(22px, auto));
+		grid-auto-rows: auto;
 	}
 
 	// .price__item-title
 
 	&__item-title {
+		padding-left: 25px;
+		position: relative;
+		&:before{
+			content: '';
+			position: absolute;
+			width: 15px;
+			height: 15px;
+			top: 2px;
+			left: 0;
+			border-radius: 100%;
+			background-color: $main-color;
+		}
 	}
 
 	// .price__price
 
 	&__price {
+		justify-self: end;
 	}
 
 	// .price__descr
 
 	&__descr {
+		padding-left: 25px;
+		grid-column: 1/3;
+		font-weight: 500;
+		font-size: 12px;
+		line-height: 18px;
 	}
 }
-.container {
-}
-.title {
-
-	// .title_fz16
-
-	&_fz16 {
-	}
-}
-.devider {
-}
-
