--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -17,11 +17,12 @@
 	// .price__wrapper
 
 	&__wrapper {
-		margin: 0 auto;
 		margin-top: 60px;
-		width: 1040px;
+		padding: 0 50px;
 		display: grid;
-		grid-template-columns: repeat(2, 370px);
+		grid-template-columns: repeat(2, 365px);
+		grid-template-rows: repeat(3, minmax(45px, auto));
+		grid-auto-rows: minmax(45px, auto);
 		justify-content: space-between;
 		row-gap: 15px;
 	}
@@ -29,17 +30,13 @@
 	// .price__item
 
 	&__item {
+		padding-left: 25px;
 		display: grid;
-		grid-template-columns: 1fr auto;
+		position: relative;
+		grid-template-columns: repeat(2, auto);
 		grid-template-rows: repeat(2, minmax(22px, auto));
 		grid-auto-rows: auto;
-	}
-
-	// .price__item-title
-
-	&__item-title {
-		padding-left: 25px;
-		position: relative;
+		row-gap: 5px;
 		&:before{
 			content: '';
 			position: absolute;
@@ -52,6 +49,11 @@
 		}
 	}
 
+	// .price__item-title
+
+	&__item-title {
+	}
+
 	// .price__price
 
 	&__price {
@@ -61,7 +63,6 @@
 	// .price__descr
 
 	&__descr {
-		padding-left: 25px;
 		grid-column: 1/3;
 		font-weight: 500;
 		font-size: 12px;
