--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -1,8 +1,9 @@
 .btn{
 	height: 45px;
-	background: $main-color;
+	background: $promo-color;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	padding: 12px 25px;
 	font-size: 14px;
+	color: white;
 	line-height: 21px;
 }
