--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -40,7 +40,7 @@
 		cursor: pointer;
 		width: 345px;
 		height: 100%;
-		background-color: $main-color;
+		background-color: $promo-color;
 		transition: all 0.6s;
 		z-index: 10;
 	}
@@ -101,7 +101,8 @@
 		}
 		&:hover{
 			&:before{
-				border: 1px solid #fff;
+				border: 1px solid $main-color;
+				background-color: $main-color;
 			}
 		}
 		a{
