--- a/src/sass/blocks/_side-panel.scss
+++ b/src/sass/blocks/_side-panel.scss
@@ -9,10 +9,11 @@
 	justify-content: space-between;
 	align-items: center;
 		&__link {
+			padding: 10px;
 			&:hover{
 				svg path{
 					transition: all 0.3s;
-					fill: $main-color;
+					fill: white;
 				}
 			}
 		}
@@ -34,8 +35,9 @@
 			font-size: 16px;
 			line-height: 24px;
 			span{
+				color: #000;
 				display: block;
-				transform: rotate(-90deg) translate(-35%, -245%);
+				transform: rotate(-90deg) translate(-42%, -245%);
 				height: 25px;
 				width: 150px;
 			}
