--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -15,7 +15,9 @@
 	&__img {
 		grid-row: 1 / 3;
 		img{
-			max-width: 100%;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 	&__subtitle{
