--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -13,7 +13,9 @@
 	&__img {
 
 		img{
-			max-width: 100%;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 
@@ -76,7 +78,21 @@
 		row-gap: 27px;
 	}
 
-	// .contacts__input
+	&__triggers{
+		grid-column: 1/3;
+		display: grid;
+		grid-template-columns: repeat(2, auto);
+		align-items: center;
+		column-gap: 35px;
+	}
+	&__policy{
+		font-weight: 500;
+		font-size: 12px;
+		line-height: 18px;
+		input{
+			margin-right: 10px;
+		}
+	}
 
 	&__input {
 		position: relative;
