--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -37,7 +37,7 @@ padding-top: 120px;
 	&__item {
 		transition: all 0.6s;
 		img{
-			max-width: 100%;
+			width: 100%;
 		}
 		&:hover{
 			transform: scale(1.02);
