--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -27,12 +27,12 @@
 	// .promo__link
 
 	&__link {
+		font-size: 14px;
+		color:#000;
 		text-transform: uppercase;
 		letter-spacing: 2px;
-		line-height: 25px;
-		span{
-			line-height: 25px;
-		}	
+		line-height: 21px;
+		font-weight: bold;
 		&.btn{
 			&:hover{
 				color:white;
