--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,8 +10,7 @@
     padding: 0;
 }
 .container{
-    width: 1170px;
-    padding: 0 15px;
+    max-width: 1140px;
     margin: 0 auto;
 }
 .devider{
@@ -20,6 +19,7 @@
     margin: 25px auto 0 auto;
     background-color: $main-color;
 }
+
 @import 'blocks/menu';
 @import 'blocks/title'; 
 @import 'blocks/promo'; 
@@ -31,4 +31,4 @@
 @import 'blocks/portfolio';
 @import 'blocks/price';
 @import 'blocks/contacts';
-
+@import 'blocks/media';
