--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -19,6 +19,28 @@
 			column-gap: 15px;
 		}
 	}
+	.usefull{
+		&__grid-container{
+			padding: 60px 20px 0 ;
+			grid-template-columns: repeat(2, 430px);
+			column-gap: 60px;
+		}
+	}
+	.skills{
+		&__grid-container{
+			grid-template-columns: repeat(3, auto);
+			grid-template-rows: repeat(2, minmax(270px, auto));
+		}
+	}
+	.stack{
+		&__grid-container{
+			grid-template-columns: repeat(3, auto);
+			justify-content: space-between;
+		}
+		&__grid-container-lines{
+			grid-template-columns: repeat(2, auto);
+		}
+	}
 }
 @media (max-width: 991.98px){
 	.container{
@@ -40,6 +62,28 @@
 		&__skills{
 			grid-template-columns: 380px;
 			grid-template-rows: minmax(115px, auto);
+		}
+	}
+	.usefull{
+		padding-top: 60px;
+		&__grid-container{
+			padding: 40px 5px 0 ;
+			grid-template-columns: 1fr;
+			grid-template-rows: repeat(2, minmax(200px, auto));
+			grid-auto-rows: auto;
+			column-gap: 60px;
+		}
+	}
+	.stack{
+		padding-top: 60px;
+		&__grid-container{
+			padding-top: 40px;
+			grid-template-columns: repeat(2, auto);
+			justify-content: center;
+		}
+		&__grid-item{
+			padding: 25px 25px 25px 25px;
+			width: 250px;
 		}
 	}
 }
@@ -70,6 +114,11 @@
 		}
 		&__skills{
 			grid-template-columns: repeat(2, 260px);
+		}
+	}
+	.stack{
+		&__grid-container-lines{
+			grid-template-columns: repeat(2, auto);
 		}
 	}
 }
@@ -121,4 +170,29 @@
 			grid-template-rows: repeat(3, auto);
 		}
 	}
+	.stack{
+		&__devider{
+			margin-top: 15px;
+		}
+		&__subtitle{
+			line-height: 36px;
+		}
+		&__grid-container{
+			padding-top: 20px;
+			grid-template-columns: repeat(1, auto);
+			justify-content: center;
+			row-gap: 20px;
+		}
+		&__grid-item{
+			padding: 25px 25px 25px 25px;
+			width: 270px;
+		}
+		&__grid-container-lines{
+			padding-top: 40px;
+			grid-template-columns:  300px;
+			justify-content: center;
+			row-gap: 40px;
+		}
+	}
+
 }
