--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -18,7 +18,8 @@ padding-top: 120px;
 	&__grid-container {
 		margin-top: 60px;
 		display: grid;
-		grid-template: repeat(2, 280px) / repeat(4, 280px);
+		grid-template-columns: repeat(4, 280px);
+		grid-template-rows: repeat(2, 280px);
 		grid-auto-rows: 280px;
 		gap: 5px;
 
@@ -38,6 +39,8 @@ padding-top: 120px;
 		transition: all 0.6s;
 		img{
 			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 		&:hover{
 			transform: scale(1.02);
