--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -73,9 +73,10 @@
 	&__form {
 		margin-top: 30px;
 		display: grid;
-		grid-template: 45px 190px  45px / repeat(2, 280px);
-		justify-content: space-between;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: 45px 190px 45px;
 		row-gap: 27px;
+		column-gap: 25px;
 	}
 
 	&__triggers{
